--- a/minilibx_macos/.github/workflows/ci.yml
+++ b/minilibx_macos/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macosf-latest]
 
     timeout-minutes: 20
     steps:
@@ -26,7 +26,7 @@ jobs:
         if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get update -qq
             sudo apt-get install -y -qq gcc make xorg libxext-dev libbsd-dev
-        elif [ "$RUNNER_OS" == "macOS" ]; then
+        elif [ "$RUNNER_OS" == "macosf" ]; then
             brew install xquartz
             echo "/usr/X11/bin" >> $GITHUB_PATH
         else
@@ -39,7 +39,7 @@ jobs:
         if [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get install xvfb xdotool valgrind
             Xvfb $DISPLAY -screen 0 1280x1024x24 &
-        elif [ "$RUNNER_OS" == "macOS" ]; then
+        elif [ "$RUNNER_OS" == "macosf" ]; then
             brew install xdotool
             defaults write org.x.X11 enable_test_extensions -boolean true
             sudo Xvfb $DISPLAY -screen 0 1280x1024x24 &           
@@ -53,11 +53,11 @@ jobs:
     - name: make check Linux
       if: matrix.os == 'ubuntu-latest'
       run: make -f Makefile.gen check
-    - name: make check MacOS
+    - name: make check Macosf
       continue-on-error: true
-      if: matrix.os == 'macos-latest'
+      if: matrix.os == 'macosf-latest'
       run: make -f Makefile.gen check
-      # Didn't find a way to simulate inputs on Macos. libxdo seem to no longer work on macos.
+      # Didn't find a way to simulate inputs on Macosf. libxdo seem to no longer work on macosf.
       # It can be partially fixed writing proper unit-tests, thus avoiding the need of libxdo.
 
     - name: Check leaks from binary "test/mlx-test"
@@ -72,7 +72,7 @@ jobs:
             xdotool search --name Title3 windowfocus key Escape
             xdotool search --name Title2 windowfocus key Escape
             wait $PID
-        elif [ "$RUNNER_OS" == "macOS" ]; then
+        elif [ "$RUNNER_OS" == "macosf" ]; then
             MallocStackLoggingNoCompact=1
             ./mlx-test &
             sleep 30
